Make sure to unhook wpa supplicant, otherwise the hostapd doens't work as it should

--- a/conf/dhcpcd.conf
+++ b/conf/dhcpcd.conf
@@ -2,10 +2,10 @@
 # See dhcpcd.conf(5) for details.
 
 # Allow users of this group to interact with dhcpcd via the control socket.
-controlgroup wheel
+controlgroup pi
 
 # Inform the DHCP server of our hostname for DDNS.
-nomad-hotspot
+hostname
 
 # Use the hardware address of the interface for the Client ID.
 clientid
@@ -58,8 +58,11 @@ slaac private
 #interface eth0
 #fallback static_eth0
 
+#denyinterfaces wlan0
 interface wlan0
 static ip_address=172.17.88.1/24
-denyinterfaces eth0
-denyinterfaces wlan0
-denyinterfaces wlan1
+	nohook wpa_supplicant
+interface wlan1
+dhcp
+interface eth0
+dhcp
