Add start and end headers for config sections inside dhcpcd config so that config page can work with it.

--- a/conf/dhcpcd.conf
+++ b/conf/dhcpcd.conf
@@ -58,11 +58,16 @@ slaac private
 #interface eth0
 #fallback static_eth0
 
-#denyinterfaces wlan0
+#wlan0start
 interface wlan0
 static ip_address=172.17.88.1/24
 	nohook wpa_supplicant
+#wlan0end
+#wlan1start
 interface wlan1
 dhcp
+#wlan1end
+#eth0start
 interface eth0
 dhcp
+#eth0end
