Move channel, for the sake of it. Channel changes require a hostapd restart, not currently doing this. Restart throws it offline for a good 30 seconds.

--- a/conf/hostapd.conf
+++ b/conf/hostapd.conf
@@ -2,7 +2,7 @@ country_code=NL
 interface=wlan0
 ssid=Nomad-Hotspot
 hw_mode=a
-channel=36
+channel=48
 macaddr_acl=0
 auth_algs=1
 ignore_broadcast_ssid=0
@@ -11,3 +11,10 @@ wpa_passphrase=OnTheRoadAgain
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=TKIP
 rsn_pairwise=CCMP
+
+ieee80211d=1
+ieee80211n=1
+
+# 802.11ac support
+ieee80211ac=1
+wmm_enabled=1
