fix typo in key file

--- a/ssl/stunnel4.conf
+++ b/ssl/stunnel4.conf
@@ -5,5 +5,5 @@ accept = 172.17.88.1:443
 connect = 172.17.88.1:8000
 
 cert = ssl/nomad-hotspot.crt
-key = ssl/nomad-hotspot.keygen
+key = ssl/nomad-hotspot.key
 
