--- a/conf/wpa_supplicant.conf
+++ b/conf/wpa_supplicant.conf
@@ -1,12 +1,14 @@
 country=NL # Your 2-digit country code
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
+bgscan="simple:30:-70:3600"
+
+network={
+    ssid=""
+    key_mgmt=NONE
+    priority=-999
+}
 network={
     ssid="SomeWifiNetwork"
     psk="password"
     key_mgmt=WPA-PSK
-}
-network={
-    ssid="any"
-    key_mgmt=NONE
-    priority=-999
 }
