Typo fix for the wpa_supplicant file

--- a/conf/wpa_supplicant.conf
+++ b/conf/wpa_supplicant.conf
@@ -1,14 +1,17 @@
-country=NL # Your 2-digit country code
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
+update_config=1
 bgscan="simple:30:-70:3600"
 
+country=NL
 network={
     ssid=""
     key_mgmt=NONE
-    priority=-999
+    priority=-9
 }
+
 network={
     ssid="SomeWifiNetwork"
     psk="password"
     key_mgmt=WPA-PSK
 }
+
